--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,19 @@
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 body {
 
     font-family: 'Lato' sans-serif;
+
+    &::-webkit-scrollbar {
+
+        display: none;
+    }
+   
 }
 
 
