finished search component | userprofile component

--- a/src/components/pin-detail/pinDetail.styles.scss
+++ b/src/components/pin-detail/pinDetail.styles.scss
@@ -3,7 +3,8 @@
 .user-page-container {
 
     display: flex;
-    margin: auto;flex-direction: column;
+    margin: auto;
+    flex-direction: column;
     background-color: white;
     max-width: 1500px;
     border-radius: 32px;
