--- a/src/components/sidebar/sidebar.styles.scss
+++ b/src/components/sidebar/sidebar.styles.scss
@@ -10,7 +10,7 @@
     background-color: white;
     height: 100%;
     overflow-y: scroll;
-    min-width: 210px;
+    min-width: 20vw;
 
     &::-webkit-scrollbar {
         display: none;
